<resources>
    <string name="app_name">IM</string>
    <string name="account_edit_text_hint">账号</string>
    <string name="password_edit_text_hint">密码</string>
    <string name="password_confirm_edit_text_hint">确认密码</string>
    <string name="login_btn_text">登录</string>
    <string name="register_user_text_view_text">注册新用户</string>
    <string name="register_btn_text">注册</string>
    <string name="account_error">账号不正确，3到20位，首位必须是字母</string>
    <string name="password_error">密码不正确，必须是3到20位数字</string>
    <string name="password_confirm_error">两次密码不一致</string>
    <string name="registering">注册中…</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="register_failed_account_exists">账号已存在</string>
    <string name="logging">登录中…</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_failed_account_not_found">账号不存在</string>
    <string name="login_failed_account_already_login">账号已登录</string>
    <string name="login_failed_invalid_account_or_password">账号或密码错误</string>
    <string name="conversations_title">消息</string>
    <string name="contacts_title">联系人</string>
    <string name="dynamics_title">动态</string>
    <string name="logout_btn_text">退（%s）出</string>
    <string name="logouting">退出中…</string>
    <string name="logout_failed">退出失败</string>
    <string name="loading_failed">加载%s失败</string>
    <string name="contacts_delete_title">删除好友</string>
    <string name="contacts_delete_message">确定要和 %s 友尽？</string>
    <string name="contacts_deleting">删除好友中…</string>
    <string name="contacts_delete_success">删除好友成功</string>
    <string name="contacts_delete_failed">删除好友失败</string>
    <string name="account_search_edit_text_hint">请输入好友账号</string>
    <string name="contacts_add_title">添加好友</string>
    <string name="add_button_label">添加</string>
    <string name="add_button_reverse_label">已添加</string>
    <string name="contacts_searching">搜索好友中…</string>
    <string name="contacts_search_success">搜索好友成功</string>
    <string name="contacts_search_failed">搜索好友失败</string>
    <string name="contacts_add_req_sending">发送添加好友请求中…</string>
    <string name="contacts_add_req_send_success">已发送添加好友请求</string>
    <string name="contacts_add_req_send_failed">发送添加好友请求失败</string>
    <string name="send_btn_label">发送</string>
    <string name="message_edit_text_hint">请输入想要发送的消息</string>
    <string name="chat_title">与 %s 交谈</string>
    <string name="non_text_message">非文本消息</string>
    <string name="conversations_loading">加载消息中…</string>
    <string name="receive_new_message">收到新消息</string>
    <string name="user_login_another_device">该账号已在其他设备登录</string>
</resources>